@startuml
!theme plain
skinparam backgroundColor transparent
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName "Helvetica"
skinparam classAttributeIconSize 0
skinparam ArrowColor #33475b
skinparam class {
  BackgroundColor #FBFCFE
  BorderColor #33475b
  ArrowColor #33475b
}
left to right direction

class User {
  +id : UUID
  +email : String
}

class Project  {
  +id : UUID
  +businessUnit : BusinessUnit
  +status : ProjectStatus
  +projectType : ProjectType
  +paid : Boolean
  +isArchived : Boolean
  +archivedAt : DateTime
  +displayOrder : Integer
  +kanbanSettings : Json
  -createdById : UUID
}

together {
  class ProjectContent  {
    +id : UUID
    -projectId : UUID
    +name : String
    +unaccentedName : String
    +description : String
    +language : Language
  }

  class ProjectMember {
    +id : UUID
    -projectId : UUID
    -userId : UUID
    +isManager : Boolean
    +hourlyRate : Decimal
  }

  class ProjectInvitation  {
    +id : UUID
    -projectId : UUID
    +email : String
    +token : String <<unique>>
    +status : InvitationStatus
    +isManager : Boolean
    +expiresAt : DateTime
    +acceptedAt : DateTime
  }
}

together {
  enum BusinessUnit {
    TawerDev
    TawerCreative
  }
  enum ProjectType  {
    AGILE
    FREESTYLE
  }
  enum ProjectStatus {
    Pending
    Running
    Stopped
    Completed
  }
  enum InvitationStatus  {
    PENDING
    ACCEPTED
    EXPIRED
    CANCELLED
  }
}

User "1" --> "0..*" Project : creates
User "1" --> "0..*" ProjectMember : "member of"
User "1" --> "0..*" ProjectInvitation : "invited by"

Project "1" --> "1..*" ProjectContent : "has (i18n)"
Project "1" --> "1..*" ProjectMember : "has team"
Project "1" --> "0..*" ProjectInvitation : "has invites"

Project ..> BusinessUnit
Project ..> ProjectType
Project ..> ProjectStatus
ProjectInvitation ..> InvitationStatus
@enduml
